--- a/package.json
+++ b/package.json
@@ -1,9 +1,9 @@
 {
-  "name": "--id--",
+  "name": "--cntslideshows--",
   "version": "0.0.0",
   "description": "TODO: add description",
   "main": "./app/index.js",
-  "browser": "./client/id.js",
+  "browser": "./client/cntslideshows.js",
   "browserify": {
     "transform": [
       "hbsfy"
@@ -20,9 +20,9 @@
   },
   "repository": {
     "type": "git",
-    "url": "git://github.com/thlorenz/--id--.git"
+    "url": "git://github.com/thlorenz/--cntslideshows--.git"
   },
-  "homepage": "https://github.com/thlorenz/--id--",
+  "homepage": "https://github.com/thlorenz/--cntslideshows--",
   "optionalDependencies": {},
   "dependencies": {
     "hbsfy": "~0.1.5",
@@ -50,7 +50,7 @@
   },
   "license": {
     "type": "MIT",
-    "url": "https://github.com/thlorenz/--id--/blob/master/LICENSE"
+    "url": "https://github.com/thlorenz/--cntslideshows--/blob/master/LICENSE"
   },
   "engine": {
     "node": ">=0.6"
