--- a/package.json
+++ b/package.json
@@ -34,13 +34,13 @@
     "nodemon": "~0.7.8",
     "sinon": "~1.7.3",
     "mocha": "~1.12.0",
-    "appup": "0.0.5",
     "tap": "~0.4.4",
     "express": "~3.3.5",
     "through": "~2.3.4",
     "zuul": "~0.2.0",
     "restify": "~2.6.0",
-    "concat-stream": "~1.0.0"
+    "concat-stream": "~1.0.0",
+    "appup": "0.0.7"
   },
   "keywords": [],
   "author": {
